--- a/app/views/account/base.html
+++ b/app/views/account/base.html
@@ -71,8 +71,8 @@
 	{% block account.navigation %}
 		<li{% if tab == 'general' %} class="active"{% endif %}><a href="/account">General</a></li>
 		<li{% if tab == 'notifications' %} class="active"{% endif %}><a href="/account/notifications">Notifications and Reminders</a></li>
-		<li{% if tab == 'propcotts' %} class="active"{% endif %}><a href="'/account/propcotts">My Propcotts</a></li>
-		<li{% if tab == 'connections' %} class="active"{% endif %}><a href="'/account/connections">Connected Accounts</a></li>
+		<li{% if tab == 'propcotts' %} class="active"{% endif %}><a href="/account/propcotts">My Propcotts</a></li>
+		<li{% if tab == 'connections' %} class="active"{% endif %}><a href="/account/connections">Connected Accounts</a></li>
 	{% endblock %}
 	</ul>
 	<div id="account-main">
