--- a/app/views/propcott/create.html
+++ b/app/views/propcott/create.html
@@ -257,6 +257,7 @@ event.call(document.getElementById('form-wrap'), verb + 'submit', function() {
 
 					<p style="font-style: italic;padding: 1em;margin: 0; cursor: default;" id="industry-container">What industry are they in?
 					<select id="propcott-industry"
+					        name="industry"
 							style="font-style: normal; border: 0; outline: 0; padding:.5em; background: rgba(0,0,0,0.025); cursor: pointer;">
 						<option>Choose an Industry</option>
 						<option>Other</option>
