--- a/app/views/propcott/draft.html
+++ b/app/views/propcott/draft.html
@@ -163,7 +163,7 @@
 				<span class="navigation-text">Delete Propcott</span>
 				<span class="typcn typcn-cancel"></span>
 			</a>
-			<a class="block" href="/d/{{ propcott.draftId }}/delete" onclick="return confirm('Are you sure you want to publish this propcott?');">
+			<a class="block" href="/d/{{ propcott.draftId }}/publish" onclick="return confirm('Are you sure you want to publish this propcott?');">
 				<span class="navigation-text">Publish Propcott</span>
 				<span class="typcn typcn-cloud-storage"></span>
 			</a>
